--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -53,6 +53,7 @@ whitelist_rules:
   - identical_operands
   - identifier_name
   - implicit_getter
+  - implicit_return
   - inert_defer
   - is_disjoint
   - joined_default_parameter
@@ -277,6 +278,10 @@ identifier_name:
     - y
     - z
     - w
+
+implicit_return:
+  included:
+    - closure
 
 large_tuple:
   warning: 3
