--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,9 @@ jobs:
       TVOS_SCHEME: SwaggerKit tvOS
       TVOS_DESTINATION: OS=13.3,name=Apple TV 4K
       TVOS_BUILD_LOG_PATH: xcodebuild-tvos.json
+      WATCHOS_SCHEME: SwaggerKit watchOS
+      WATCHOS_DESTINATION: OS=6.1.1,name=Apple Watch Series 5 - 44mm
+      WATCHOS_BUILD_LOG_PATH: xcodebuild-watchos.json
       SKIP_SWIFTLINT: TRUE
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
       DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
@@ -46,17 +49,21 @@ jobs:
         run: |
           set -o pipefail
           swift --version
-      - name: Tests - iOS
+      - name: Test iOS
         run: |
           xcodebuild clean build test -workspace "$XCODE_WORKSPACE" -scheme "$IOS_SCHEME" -destination "$IOS_DESTINATION" | XCPRETTY_JSON_FILE_OUTPUT="$IOS_BUILD_LOG_PATH" xcpretty -f `xcpretty-json-formatter`
           bash <(curl -s https://codecov.io/bash) -cF ios -J 'SwaggerKit'
-      - name: Tests - macOS
+      - name: Test macOS
         run: |
           xcodebuild clean build test -workspace "$XCODE_WORKSPACE" -scheme "$MACOS_SCHEME" -destination "$MACOS_DESTINATION" | XCPRETTY_JSON_FILE_OUTPUT="$MACOS_BUILD_LOG_PATH" xcpretty -f `xcpretty-json-formatter`
           bash <(curl -s https://codecov.io/bash) -cF osx -J 'SwaggerKit'
-      - name: Tests - tvOS
+      - name: Test tvOS
         run: |
           xcodebuild clean build test -workspace "$XCODE_WORKSPACE" -scheme "$TVOS_SCHEME" -destination "$TVOS_DESTINATION" | XCPRETTY_JSON_FILE_OUTPUT="$TVOS_BUILD_LOG_PATH" xcpretty -f `xcpretty-json-formatter`
+          bash <(curl -s https://codecov.io/bash) -cF tvos -J 'SwaggerKit'
+      - name: Build watchOS
+        run: |
+          xcodebuild clean build test -project "$XCODE_PROJECT" -scheme "$WATCHOS_SCHEME" -destination "$WATCHOS_DESTINATION" | XCPRETTY_JSON_FILE_OUTPUT="$WATCHOS_BUILD_LOG_PATH" xcpretty -f `xcpretty-json-formatter`
           bash <(curl -s https://codecov.io/bash) -cF tvos -J 'SwaggerKit'
       - name: Danger
         run: bundle exec danger --remove-previous-comments
@@ -84,5 +91,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         run: swift build
-      - name: Tests
+      - name: Test
         run: swift test
