--- a/.codecov.yml
+++ b/.codecov.yml
@@ -7,14 +7,19 @@ coverage:
     project:
       default:
         threshold: 1.0%
+        paths:
+          - "Sources"
     changes:
       default:
         threshold: 1.0%
-    patch: false
+        paths:
+          - "Sources"
+    patch: off
 
 comment:
   layout: "flags, files"
   behavior: new
+  after_n_builds: 3
 
 ignore:
   - Tests/**/*
