--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,3 +1,7 @@
+codecov:
+  notify:
+    after_n_builds: 3
+
 coverage:
   precision: 2
   round: down
@@ -10,11 +14,14 @@ coverage:
     changes:
       default:
         threshold: 1.0%
-    patch: false
+    patch: off
 
 comment:
   layout: "flags, files"
   behavior: new
+  after_n_builds: 3
 
 ignore:
-  - Tests/**/*
+  - Tests
+  - Pods
+  - Scripts
